Fixes empty trips state and animation overflow

--- a/client/components/reset/_reset.sass
+++ b/client/components/reset/_reset.sass
@@ -25,4 +25,4 @@ html, body
   user-select: none
   font-size: $font-size
   font-color: $font-color
-  overflow: none
+  overflow: hidden
